# FastApiCrud

./: README.md
fast_zero/: pyproject.toml
fast_zero/fast_zero/: app.py
fast_zero/tests/: test_app.py
